--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "dependencies": {
     "discord.js": "^14.7.1",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "socket.io-client": "^4.6.1"
   },
-  "name": "bot-discord",
+  "name": "bot-gpt",
   "version": "1.0.0",
-  "description": "bot de estudos de programacao para discord",
+  "description": "Bot connecting chatGPT to discord(with internet access)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [
     "bot-discord"
   ],
-  "author": "Rafaella Ballerini",
-  "license": "ISC"
+  "author": "Eletroswing",
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
